2013-04-01 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/events.php, mobile/include/style/main.css: first
	version of custom responsive view for details events.

2013-04-01  Sancho Lerena <slerena@artica.es>

	* operation/agentes/sla_view.php,
	operation/agentes/ver_agente.php: Removed old "SLA view", now unused.

	* general/error_authconfig.php,
	general/error_dbconfig.php,	
	general/error_emptyconfig.php,
	general/error_install.php,
	general/error_noconfig.php,
	general/error_perms.php,
	general/login_page.php,
	general/logoff.php,
	include/styles/pandora.css,
	include/styles/pandora_black.css,
	include/styles/pandora_minimal.css: replaced PNG images for JPG version, much lighter.

	* images/header_f2.jpg,
	images/header_f2b.jpg,
	images/login_background.jpg: New JPG version of old PNG images.

	* images/header_f2.png,
	images/header_f2b.png,
	images/login_background.png: Removed PNG's.

	(merged from 4.0 branch)

2013-03-31  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_network_map_enterprise.php: Updated help.

2013-03-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/events.php, mobile/operation/tactical.php,
	mobile/include/ui.class.php, mobile/include/style/main.css,
	mobile/images/datos_blue.png, mobile/images/datos_brown.png,
	mobile/images/datos_green.png, mobile/images/datos_pink.png,
	mobile/images/datos_grey.png, mobile/images/datos_red.png,
	mobile/images/datos_yellow.png: some fixes and changes in the
	Pandora mobile.

2013-03-27  Mario Pulido <mario.pulido@artica.es>
	
	* include/help/es/help_network_map_enterprise.php,
       include/help/en/help_network_map_enterprise.php,
       images/help/netmap1.png,images/help/netmap2.png
       images/help/netmap3.png: Modified networkmap enterprise help.


2013-03-27  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_plugin_definition.php: Updated help.

2013-03-27  Junichi Satoh  <junichi@rworks.jp>
